--- a/Exercise09/Exercise09.ipynb
+++ b/Exercise09/Exercise09.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,20 +11,20 @@
        "xml.etree.ElementTree.ElementTree"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import xml.etree.ElementTree as ET\n",
-    "tree2=ET.parse('xml1.xml')\n",
+    "tree2=ET.parse('../datasets/xml1.xml')\n",
     "type(tree2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
