--- a/Exercise11/Exercise11.ipynb
+++ b/Exercise11/Exercise11.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of a food item (enter 'quit' to quit): chicken tikka\n",
+      "Retrieved 2611 characters\n"
+     ]
+    }
+   ],
    "source": [
     "import  requests, urllib.parse\n",
     "\n",
@@ -20,14 +29,25 @@
     "url = serviceurl + urllib.parse.urlencode({'q':item})+'&p=1&format=xml'\n",
     "uh = requests.get(url)\n",
     "data = uh.text\n",
-    "print('Retrieved', len(data), 'characters')\n"
+    "print('Retrieved', len(data), 'characters')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.find(\"<!DOCTYPE html PUBLIC\") "
    ]
@@ -44,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,13 +263,6 @@
     "        print(h.text)\n",
     "        print(\"-\"*100)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
