--- a/Exercise14/Exercise14.ipynb
+++ b/Exercise14/Exercise14.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "string1 = 'Python'\n",
-    "pattern = r\"Python\" \n"
+    "pattern = r\"Python\" "
    ]
   },
   {
@@ -36,20 +36,28 @@
     "if re.match(pattern,string1):\n",
     "    print(\"Matches!\")\n",
     "else:\n",
-    "    print(\"Doesn't match.\") \n"
+    "    print(\"Doesn't match.\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doesn't match.\n"
+     ]
+    }
+   ],
    "source": [
     "string2 = 'python'\n",
     "if re.match(pattern,string2):\n",
     "    print(\"Matches!\")\n",
     "else:\n",
-    "    print(\"Doesn't match.\")\n"
+    "    print(\"Doesn't match.\")"
    ]
   }
  ],
@@ -69,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
